tests/specs/run/ts_import_assertions/assertion.out
error: Import assertions are deprecated. Use `with` keyword, instead of 'assert' keyword.

import test from "./data.json" assert { type: "json" };

  at file:///[WILDLINE]/assertion.ts:1:1

